# doc_classification

./: README.md  app.py  exploration.ipynb  hello.py  main_notebook.ipynb  pyproject.toml  requirements.txt
data/: data_info.json
scripts/: data_preparation.py  plots.py
