[project]
name = "doc-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nbformat>=5.10.4",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "rich>=14.0.0",
]
